fixed header z-index

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ header {
 	align-items: center;
 	justify-content: center;
 	position: fixed;
+	z-index: 1;
 }
 
 h1 {
